[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/HUD/cursor.png" type="Texture" id=1]
[ext_resource path="res://HUD/Cursor.gd" type="Script" id=2]

[node name="Cursor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="TextureRect" parent="."]
margin_left = 303.0
margin_top = 132.0
margin_right = 335.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="TopRight" type="TextureRect" parent="."]
margin_left = 399.0
margin_top = 132.0
margin_right = 431.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="TextureRect" parent="."]
margin_left = 303.0
margin_top = 187.0
margin_right = 335.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="TextureRect" parent="."]
margin_left = 396.0
margin_top = 199.0
margin_right = 428.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}
